Turned off fixed navbar on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -15,6 +15,16 @@
   margin-top: 0;
 }
 
+// Turn off fixed navbar on mobile
+@media(max-width: 992px) {
+  .ui.navbar.fixed {
+    position: initial;
+    +.ui.main.grid {
+      padding-top: initial;
+    }
+  }
+}
+
 .ui.vertical.topics.menu .active.item {
   box-shadow: 4px 0 0 inset;
 }
